--- a/SVM_ForestFire.ipynb
+++ b/SVM_ForestFire.ipynb
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "df= pd.read_csv(\"D:\\\\pyt\\\\Assignment\\\\Assignment 17-Support Vector Machines\\\\forestfires.csv\")\n",
+    "df= pd.read_csv(\"forestfires.csv\")\n",
     "df.head()"
    ]
   },
